--- a/index.html
+++ b/index.html
@@ -68,15 +68,16 @@
     </div>
     <div class="nav-bar">
       <div class="nav_icon">
-      <img src="images/nav_icon1.jpg" alt="..." />
-      <img src="images/nav_icon2.jpg" alt="..." />
-      <img src="images/nav_icon3.jpg" alt="..." />
-      <img src="images/nav_icon4.jpg" alt="..." />
-      <img src="images/nav_icon5.jpg" alt="..." />
-      <img src="images/nav_icon6.jpg" alt="..." />
-      <img src="images/nav_icon7.jpg" alt="..." />
-      <img src="images/nav_icon8.jpg" alt="..." />
-      <img src="images/nav_icon9.jpg" alt="..." />
+      <img src="images/nav_icon1.png" alt="..." />
+      <img src="images/nav_icon3.png" alt="..." />
+      <img src="images/nav_icon1.png" alt="..." />
+      <img src="images/nav_icon3.png" alt="..." />
+      <img src="images/nav_icon5.png" alt="..." />
+      <img src="images/nav_icon5.png" alt="..." />
+      <img src="images/nav_icon7.png" alt="..." />
+      <img src="images/nav_icon8.png" alt="..." />
+      <img src="images/nav_icon5.png" alt="..." />
+      <img src="images/nav_icon5.png" alt="..." />
       </div>
     </div>
   </header>
@@ -162,9 +163,8 @@
         <div class="promotion_box">
           <a>할인혜택</br></a>
           <div class="promotion_img"><img src="images/banana.png" alt="..." /></div>
-          <a>Golden Short Break</br>
-            3+1 골든패스 호텔 패키지
-          </a>
+          <a>Golden Short Break</a></br>
+            <a>3+1 골든패스 호텔 패키지</a>
           <div>
             <button class="promotion_btn">SEE MORE</button>
           </div>
@@ -173,7 +173,7 @@
           <a>할인혜택</br></a>
           <div class="promotion_img"><img src="images/fox1.png" alt="..." /></div>
           <a>Golden Short Break</br>
-          골든패스 호텔 패키지
+          3+1 골든패스 호텔 패키지
           </a>
           <div>
             <button class="promotion_btn">SEE MORE</button>
@@ -228,21 +228,18 @@
       <a>파크지도</a></br>
       <a>레고랜드를 한눈에 !</a>
       </div>
-      <div class="vl"></div>
       <div class="guide2">
-        <img src="images/guide_img1.png" alt="..." />
-        <a>레고랜드 모바일 앱</a></br>
-        <a>레고랜드를 어플로 만나보세요 !</a>
+        <img src="images/guide_img2.png" alt="..." />
+        <a>공식 모바일 앱</a></br>
+        <a>어플로 만나는 레고랜드 !</a>
         </div>
-        <div class="vl"></div>
         <div class="guide3">
-        <img src="images/guide_img1.png" alt="..." />
+        <img src="images/guide_img3.png" alt="..." />
         <a>방문 전 확인사항</a></br>
         <a>오기 전에 확인하면 좋아요 : )</a>
         </div>
-        <div class="vl"></div>
         <div class="guide4">
-        <img src="images/guide_img1.png" alt="..." />
+        <img src="images/guide_img4.png" alt="..." />
         <a>편리사항</a></br>
         <a>궁금한건 물어보세요 ~</a>
         </div>
@@ -264,7 +261,7 @@
   <!-- FOOTER -->
   <footer>
     <div class="container">
-      <img src="./images/LEGOLOGO.png" alt="LEGOLOGO">
+      <img src="./images/footer_logo.png" alt="LEGOLOGO">
       <div class="vl"></div>
   
       <div class="footer_content">
@@ -284,7 +281,7 @@
         <a href="javascript:void(0)"><img src="./images/facebook.png" alt=""></a>
         <a href="javascript:void(0)"><img src="./images/twitter.png" alt=""></a>
         <a href="javascript:void(0)"><img src="./images/Instagram.png" alt=""></a>
-        <a href="javascript:void(0)"><img src="./images/twitter.png" alt=""></a>
+        <!-- <a href="javascript:void(0)"><img src="./images/twitter.png" alt=""></a> -->
       </div>
 
       <div class="contact-info">
