--- a/mb_bricktopia.html
+++ b/mb_bricktopia.html
@@ -39,6 +39,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://webfontworld.github.io/goodchoice/Jalnan.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@500&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./css/mb_bricktopia.css">
   
