Update redirect arrow buttons

--- a/mb_attraction_detail.html
+++ b/mb_attraction_detail.html
@@ -137,11 +137,13 @@
 <div id="main-page-container">
 
   <div class="mb_top_line">
-    <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
-    </div>  
+
+    <div class="mb_main_logo">
+      <a href="./mb_bricktopia.html"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
+    </div>
     <div class="mb_hamburger_btn">
       <img src="images/mb_lang.png" alt="...">
-      <a id="hamburger-link">
+      <a href="#" id="hamburger-link">
         <img src="images/mb_hamburger.png" alt="...">
       </a>
     </div>
