--- a/mb_onedayPass.html
+++ b/mb_onedayPass.html
@@ -140,7 +140,7 @@
     <div class="mb_top_line">
 
       <div class="mb_main_logo">
-        <a href="./mb_bricktopia.html"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
+        <a href="./mb_main.html"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
       </div>
       <div class="mb_hamburger_btn">
         <img src="images/mb_lang.png" alt="...">
