--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- 모바일 웹으로 고!!  -->
     <div id="floatingIconContainer">
       <a href="./mb_main.html">
-      <img src="./images/floatingCat.png" alt="Floating Icon" id="floatingIcon">
+      <img src="./images/favicon-96x96.png" alt="Floating Icon" id="floatingIcon">
       </a>
     </div>
 
