--- a/mb_bricktopia.html
+++ b/mb_bricktopia.html
@@ -80,8 +80,8 @@
     
     <div class="menu">
       <div class="menu-item search-bar">
-        <!-- <span class="search-icon"><i class="material-icons">search</i></span> -->
-        <!-- <input class="search-text" id="searchInput"type="text" name="" placeholder="SEARCH FOR ..."></input> -->
+        <!-- <span class="search-icon"><i class="material-icons">search</i></span>
+        <input class="search-text" id="searchInput"type="text" name="" placeholder="SEARCH FOR ..."></input>  -->
       </div>
 
       <div class="weather">
