--- a/index.html
+++ b/index.html
@@ -68,16 +68,46 @@
     </div>
     <div class="nav-bar">
       <div class="nav_icon">
-      <img src="images/nav_icon1.png" alt="..." />
-      <img src="images/nav_icon3.png" alt="..." />
-      <img src="images/nav_icon1.png" alt="..." />
-      <img src="images/nav_icon3.png" alt="..." />
-      <img src="images/nav_icon5.png" alt="..." />
-      <img src="images/nav_icon5.png" alt="..." />
-      <img src="images/nav_icon7.png" alt="..." />
-      <img src="images/nav_icon8.png" alt="..." />
-      <img src="images/nav_icon5.png" alt="..." />
-      <img src="images/nav_icon5.png" alt="..." />
+      <div class="nav_1">
+        <img src="images/nav_icon1.png" alt="..." />
+        <a>캘린더</a>
+      </div>
+      <div class="nav_1">
+        <img src="images/nav_icon2.png" alt="..." />
+        <a>예매</a>
+      </div>
+      <div class="nav_1">
+        <img src="images/nav_icon3.png" alt="..." />
+        <a>호텔</a>
+      </div>
+      <div class="nav_1">
+        <img src="images/nav_icon4.png" alt="..." />
+        <a>어트랙션</a>
+      </div>
+      <div class="nav_1">
+        <img src="images/nav_icon5.png" alt="..." />
+        <a>쇼핑</a>
+      </div>
+      <div class="nav_1">
+        <img src="images/nav_icon6.png" alt="..." />
+        <a>프로모션</a>
+      </div>
+      <div class="nav_1">
+        <img src="images/nav_icon7.png" alt="..." />
+        <a>지도</a>
+      </div>
+      <div class="nav_1">
+        <img src="images/nav_icon8.png" alt="..." />
+        <a>가이드</a>
+      </div>
+      <div class="nav_1">
+        <img src="images/nav_icon9.png" alt="..." />
+        <a>배리어프리</a>
+      </div>
+      <div class="nav_1">
+        <img src="images/nav_icon10.png" alt="..." />
+        <a>QnA</a>
+      </div>
       </div>
     </div>
   </header>
