--- a/mb_main.html
+++ b/mb_main.html
@@ -184,14 +184,14 @@
   <span class="promotion_title">THEME PARK</span>
   <div class="themepark1">
     <div class="themepark_box">
-        <img src="images/mb_theme1.png" alt="..." /><br>
+        <img src="images/mb_theme1_1.png" alt="..." /><br>
         <span class="themepark_subtitle">
         BRICK STREET
         </span>
     </div>
     <div class="themepark_box">
       <a href="./mb_bricktopia.html">
-      <img src="images/mb_theme3.png" alt="..." /><br>
+      <img src="images/mb_theme2.png" alt="..." /><br>
       <span class="themepark_subtitle">
         BRICKTOPIA
       </span>
@@ -200,13 +200,13 @@
   </div>
   <div class="themepark2">
     <div class="themepark_box2">
-        <img src="images/mb_theme3.png" alt="..." /><br>
+        <img src="images/mb_theme2_1.png" alt="..." /><br>
         <span class="themepark_subtitle">
         LEGO CASTLE
         </span>
     </div>
     <div class="themepark_box2">
-      <img src="images/mb_theme1.png" alt="..." /><br>
+      <img src="images/mb_theme4.png" alt="..." /><br>
       <span class="themepark_subtitle">
         LEGO CITY
       </span>
