--- a/mb_themepark.html
+++ b/mb_themepark.html
@@ -65,7 +65,7 @@
 
   <style>
     #columns {
-        column-width:192px;
+        column-width:190px;
         column-gap: 0px;
         border-right: 2px solid black;
       }
@@ -73,16 +73,16 @@
         text-align: center;
         display: inline-block;
         border-left: 2px solid black;
-        border-right: 2px solid black;
+        /* border-right: 2px solid black; */
         border-bottom: 2px solid black;
         margin:0;
-        padding: 20px 40px;
+        padding: 35px 40px 20px 40px;
       }
       #columns figure img {
-        width: 112px;
+        width: 70px;
       }
       #columns figure figcaption {
-        padding:10px;
+        padding:15px;
         margin-top:11px;
       }
   </style>
@@ -184,17 +184,17 @@
   
   <div id="columns">
     <figure>
-      <img src="images/mb_theme1.png">
+      <img src="images/mb_theme1_1.png">
       <figcaption>BRICK STREET</figcaption>
     </figure>
 
     <figure>
-      <img src="images/mb_theme3.png">
+      <img src="images/mb_theme2.png">
       <figcaption>LEGO CASTLE</figcaption>
     </figure>
 
     <figure>
-      <img src="images/mb_theme1.png">
+      <img src="images/mb_theme5.png">
       <figcaption>NINJAGO WORLD</i></figcaption>
     </figure>
 
@@ -205,23 +205,23 @@
 
     <a href="./mb_bricktopia.html">
     <figure>
-      <img src="images/mb_theme3.png">
+      <img src="images/mb_theme2_1.png">
       <figcaption>BRICK TOPIA</figcaption>
     </figure>
    </a>
 
     <figure>
-      <img src="images/mb_theme1.png">
+      <img src="images/mb_theme4.png">
       <figcaption>LEGO CITY</figcaption>
     </figure>    
 
     <figure>
-      <img src="images/mb_theme3.png">
+      <img src="images/mb_theme6.png">
       <figcaption>PIRATE SHORES</figcaption>
     </figure>
 
     <figure>
-      <img src="images/mb_theme1.png">
+      <img src="images/mb_theme7.png">
       <figcaption>MINILAND</figcaption>
     </figure>   
   </div>
