--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
   
   <section class="weather">
     <div class="temperature">
-      <h1 class="celsius">14°</h1>
-      <img src="./images/snow.png" class="weather-icon" alt="weather_icon">
+      <h1 class="celsius">28°</h1>
+      <img src="./images/clouds.png" class="weather-icon" alt="weather_icon">
     </div>
 
     <div class="openingHours">
