--- a/mb_themepark.html
+++ b/mb_themepark.html
@@ -107,8 +107,8 @@
 
       <div class="weather">
         <div class="temperature">
-          <h1 class="celsius">14°</h1>
-          <img class="weather-icon-mb" src="./images/banana.png" alt="weather_icon">
+          <h1 class="celsius">28°</h1>
+          <img class="weather-icon-mb" src="./images/clouds.png" alt="weather_icon">
         </div>        
       </div>
       
